--- a/.cpanel.yml
+++ b/.cpanel.yml
@@ -1,6 +1,6 @@
 ---
 deployment:
   tasks:
-    - export DEPLOYPATH=/home/luizalbano/ifsp.luizalbano.com.br/www/
+    - export DEPLOYPATH=/home/luizalbano/ifsp.luizalbano.com.br/public_html/
     - /bin/cp -R * $DEPLOYPATH
     
