--- a/.github/workflows/deploycPanel.yml
+++ b/.github/workflows/deploycPanel.yml
@@ -17,8 +17,7 @@ jobs:
         server: ${{ secrets.FTP_SERVER }}
         username: ${{ secrets.FTP_USERNAME }}
         password: ${{ secrets.FTP_PASSWORD }}
-  Composer:
-    name: Install dependencies
-    uses: php-actions/composer@v6
+    - name: Install dependencies
+      uses: php-actions/composer@v6
       with:
         command: php composer install
