--- a/.github/workflows/deploycPanel.yml
+++ b/.github/workflows/deploycPanel.yml
@@ -20,4 +20,4 @@ jobs:
     - name: Install dependencies
       uses: php-actions/composer@v6
       with:
-        command: php composer install
+        command: composer install
