--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -1,3 +1,12 @@
+# config/routes.yaml
+app.swagger_ui:
+    path: /api/doc
+    methods: GET
+    defaults: { _controller: nelmio_api_doc.controller.swagger_ui }
+    
+api_login_check:
+    path: /api/auth
+
 controllers:
     resource:
         path: ../src/Controller/
