--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -15,7 +15,7 @@ security:
         app_user_provider:
             entity:
                 class: App\Entity\User
-                property: email
+                property: username
     firewalls:
         login:
             pattern: ^/api/auth
@@ -34,6 +34,7 @@ security:
         main:
             lazy: true
             provider: app_user_provider
+            access_denied_handler: App\Security\AccessDeniedHandler
 
             # activate different ways to authenticate
             # https://symfony.com/doc/current/security.html#the-firewall
