--- a/config/packages/nelmio_api_doc.yaml
+++ b/config/packages/nelmio_api_doc.yaml
@@ -16,7 +16,7 @@ nelmio_api_doc:
             
     areas: # to filter documented areas
         path_patterns:
-            - ^/api(?!/doc$) # Accepts routes under /api except /api/doc
+            - ^/api(?!/doc|/doc.json$) # Accepts routes under /api except /api/doc
         #host_patterns: # document only routes with a host of the form api.*
         #    - ^api\.
 
