--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -17,17 +17,28 @@ security:
                 class: App\Entity\User
                 property: username
     firewalls:
-        login:
+        #login:
+        #    pattern: ^/api/auth
+        #    stateless: true
+        #    json_login:
+        #        check_path: /api/auth
+        #        success_handler: lexik_jwt_authentication.handler.authentication_success
+        #        failure_handler: lexik_jwt_authentication.handler.authentication_failure
+        jwt_auth:
             pattern: ^/api/auth
             stateless: true
             json_login:
                 check_path: /api/auth
                 success_handler: lexik_jwt_authentication.handler.authentication_success
-                failure_handler: lexik_jwt_authentication.handler.authentication_failure
+        
         api:
             pattern:   ^/api
             stateless: true
             jwt: ~
+            entry_point: jwt
+            refresh_jwt:
+                check_path: jwt_refresh
+
         dev:
             pattern: ^/(_(profiler|wdt)|css|images|js)/
             security: false
