--- a/config/services.yaml
+++ b/config/services.yaml
@@ -5,6 +5,7 @@
 # https://symfony.com/doc/current/best_practices.html#use-parameters-for-application-configuration
 parameters:
     app.media_event_images: 'assets/images/events/'
+    app.media_lecture_images: 'assets/images/lectures/'
 
 services:
     # default configuration for services in *this* file
