--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -16,6 +16,12 @@ security:
             entity:
                 class: App\Entity\User
                 property: username
+
+        backend_user_provider:
+            entity:
+                class: App\Entity\User
+                property: email
+
     firewalls:
         #login:
         #    pattern: ^/api/auth
@@ -26,6 +32,7 @@ security:
         #        failure_handler: lexik_jwt_authentication.handler.authentication_failure
         jwt_auth:
             pattern: ^/api/auth
+            provider: app_user_provider
             stateless: true
             json_login:
                 check_path: /api/auth
@@ -33,6 +40,7 @@ security:
         
         api:
             pattern:   ^/api
+            provider: app_user_provider
             stateless: true
             jwt: ~
             entry_point: jwt
@@ -44,8 +52,15 @@ security:
             security: false
         main:
             lazy: true
-            provider: app_user_provider
-            access_denied_handler: App\Security\AccessDeniedHandler
+            provider: backend_user_provider
+            login_throttling:
+                max_attempts: 5
+                interval: '1 hour'
+            form_login: 
+                login_path: app_dashboard_login
+                check_path: app_dashboard_login
+                enable_csrf: true
+
 
             # activate different ways to authenticate
             # https://symfony.com/doc/current/security.html#the-firewall
@@ -60,6 +75,7 @@ security:
         - { path: ^/api/login, roles: PUBLIC_ACCESS  }
         - { path: ^/api/doc, roles: PUBLIC_ACCESS  }
         - { path: ^/api,       roles: IS_AUTHENTICATED_FULLY }
+        - { path: ^/dashboard/login, roles: PUBLIC_ACCESS }
         # - { path: ^/admin, roles: ROLE_ADMIN }
         # - { path: ^/profile, roles: ROLE_USER }
 
