--- a/config/dashboard.yaml
+++ b/config/dashboard.yaml
@@ -3,9 +3,11 @@ dashboard:
         menu:
         
             - { name: dashboard, title: Dashboard, url : app_dashboard, icon: sliders }
+            - { name: courses, title: Cursos, url : app_course_index, icon: home }
+            - { name: events, title: Eventos, url : app_event_index, icon: calendar }
             - { name: user, title: Usuários, url : app_user_index, icon: users, subitens: [ 
                     { name: user_list, title: Listar, url : app_user_index, icon: '' },
                     { name: user_new, title: Novo Usuário, url : app_user_new, icon: '' }
                 ]
             }
-            - { name: reports, title: Relatórios, url : app_dashboard_login, icon: pie-chart }
+            - { name: reports, title: Relatórios, url : app_dashboard, icon: pie-chart }
