--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -50,18 +50,20 @@ security:
         dev:
             pattern: ^/(_(profiler|wdt)|css|images|js)/
             security: false
+        
         main:
+            pattern:   ^/dashboard
             lazy: true
             provider: backend_user_provider
-            login_throttling:
-                max_attempts: 5
-                interval: '1 hour'
             form_login: 
                 login_path: app_dashboard_login
                 check_path: app_dashboard_login
+                default_target_path: app_dashboard
                 enable_csrf: true
-
-
+            login_throttling:
+                max_attempts: 5
+                interval: '1 hour'
+            
             # activate different ways to authenticate
             # https://symfony.com/doc/current/security.html#the-firewall
 
@@ -76,6 +78,7 @@ security:
         - { path: ^/api/doc, roles: PUBLIC_ACCESS  }
         - { path: ^/api,       roles: IS_AUTHENTICATED_FULLY }
         - { path: ^/dashboard/login, roles: PUBLIC_ACCESS }
+        # - { path: ^/dashboard, roles: ROLE_ADMIN }
         # - { path: ^/admin, roles: ROLE_ADMIN }
         # - { path: ^/profile, roles: ROLE_USER }
 
